--- a/regra1.htm
+++ b/regra1.htm
@@ -17,8 +17,8 @@
     <p>Se não for um familiar próximo, entre em contato com a família da pessoa ou o hospital para saber se
         , e quando, você pode visitar a pessoa internada.</p>
     <ul>
-        <li> <a href="index.htm"> < Página Anterior </a> </li>
-        <li> <a href="regra2.htm"> Próxima Página > </a> </li>
+        <li> <a href="index.htm"> Página Anterior </a> </li>
+        <li> <a href="regra2.htm"> Próxima Página </a> </li>
     </ul>    
 </body>
 
